--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -51,6 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+     <Compile Include="Assets\CameraController.cs" />
      <Compile Include="Assets\Scripts\Data\RoomSpawnData.cs" />
      <Compile Include="Assets\Scripts\Data\RoomSpawnManager.cs" />
      <Compile Include="Assets\Scripts\Door.cs" />
