--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
      <Compile Include="Assets\Game Resources\Scripts\Ability System\Ability.cs" />
      <Compile Include="Assets\Game Resources\Scripts\Ability System\AbilityCaster.cs" />
+     <Compile Include="Assets\Game Resources\Scripts\Ability System\AbilityInventory.cs" />
      <Compile Include="Assets\Game Resources\Scripts\Ability System\AbilityTargettingMethod.cs" />
      <Compile Include="Assets\Game Resources\Scripts\Ability System\ActiveSpellManager.cs" />
      <Compile Include="Assets\Game Resources\Scripts\Ability System\ColourChangeEffect.cs" />
